tooltips: ensure tooltip children get a transparent background
Since the background of the tooltip is semi-transparent, its children
must be transparent too, or it will look bad.

https://bugzilla.gnome.org/show_bug.cgi?id=673364

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -115,7 +115,7 @@ GtkWindow:backdrop {
 }
 
 .tooltip * {
-    background-color: alpha(@theme_tooltip_bg_color, 0.90);
+    background-color: transparent;
 }
 
 /*****************
